dont cache xml string in memory, instead parse input stream with sax parser (#386)
plus other refactorings